[tool.poetry]
name = "botsreustacio"
version = "0.1.0"
description = ""
authors = ["Rich <richelton14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
databases = {extras = ["sqlite"], version = "^0.4.3"}
duck-orm = "^0.1.0"
urllib3 = "^2.0.3"
discord-py = {extras = ["voice"], version = "^2.3.1"}
gtts = "^2.3.2"
pynacl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
